--- a/frontend/src/pages/Customer/Profile/ProfilePage.css
+++ b/frontend/src/pages/Customer/Profile/ProfilePage.css
@@ -173,3 +173,8 @@
 .cancel-button:hover {
   background-color: #b4846c; /* Darker brown */
 }
+
+h2 {
+  font-size: 30px;
+  margin-bottom: 15px;
+}
