--- a/frontend/src/pages/Staff/Employees/EmployeesPage.css
+++ b/frontend/src/pages/Staff/Employees/EmployeesPage.css
@@ -101,6 +101,7 @@ Grid Styling .grid {
 }
 
 .rating-container .select {
+  width: 10vh;
   padding: 0.5rem;
   font-size: 0.95rem;
   border-radius: 0.375rem;
@@ -119,5 +120,5 @@ Grid Styling .grid {
 .rating-container .rating-value {
   font-size: 1rem;
   font-weight: bold;
-  color: #2d3748;
+  color: #262a31;
 }
