--- a/frontend/src/pages/Admin/Dashboard/DashboardPage.css
+++ b/frontend/src/pages/Admin/Dashboard/DashboardPage.css
@@ -11,7 +11,7 @@
   margin: 0 auto;
 }
 
-.header {
+.header-dashboard {
   background-color: #ffffff;
   padding: 1.5rem;
   border-radius: 0.5rem;
@@ -116,7 +116,7 @@
 .stats {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  gap: 1.5rem;
+  gap: 50px;
   margin-bottom: 2rem;
 }
 
@@ -155,6 +155,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  font-size: 20px;
 }
 
 .charts {
