--- a/frontend/src/pages/Customer/Menu/MenuPage.css
+++ b/frontend/src/pages/Customer/Menu/MenuPage.css
@@ -8,7 +8,7 @@
 /* Search Section */
 .search-section {
   display: flex;
-  align-items: center;
+  align-content: center;
   justify-content: space-between;
   margin-bottom: 2rem;
 }
