--- a/frontend/src/pages/Staff/CreateSlip/CreateSlip.css
+++ b/frontend/src/pages/Staff/CreateSlip/CreateSlip.css
@@ -165,7 +165,7 @@
 /* Submission Alert */
 .submission-alert {
   position: fixed;
-  bottom: 1rem; /* bottom-4 */
+  top: 20px; /* bottom-4 */
   right: 1rem; /* right-4 */
   background-color: #10b981; /* bg-green-500 */
   color: #ffffff; /* text-white */
