--- a/frontend/src/pages/Admin/ManagementEmployee/ManagementEmployeePage.css
+++ b/frontend/src/pages/Admin/ManagementEmployee/ManagementEmployeePage.css
@@ -389,3 +389,115 @@ tr:hover {
   background-color: #f1f5f9;
   cursor: not-allowed;
 }
+
+/* modal detail employee */
+.modal-detail-employee-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.modal-detail-employee-content {
+  background: white;
+  border-radius: 8px;
+  padding: 20px;
+  width: 400px;
+  max-width: 90%;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  position: relative;
+  animation: fadeIn 0.3s ease-in-out;
+}
+
+.modal-detail-employee-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.modal-detail-employee-header h3 {
+  margin: 0;
+  font-size: 1.5rem;
+}
+
+.modal-detail-employee-close-button {
+  background: none;
+  border: none;
+  font-size: 1.5em;
+  cursor: pointer;
+  color: #333;
+}
+
+.modal-detail-employee-body p {
+  margin: 10px 0;
+  font-size: 1rem;
+  color: #555;
+}
+
+.modal-detail-employee-body strong {
+  color: #222;
+}
+
+.modal-detail-employee-footer {
+  text-align: right;
+  margin-top: 20px;
+}
+
+.modal-detail-employee-footer .modal-detail-employee-close-button {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 8px 16px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.modal-detail-employee-footer .modal-detail-employee-close-button:hover {
+  background-color: #0056b3;
+}
+
+/* Animation for fade-in effect */
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: scale(0.95);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+/* detail button */
+.details-button-employee {
+  background-color: #17a2b8; /* Màu xanh nhạt */
+  color: white;
+  border: none;
+  padding: 8px 12px;
+  border-radius: 4px;
+  font-size: 0.9rem;
+  cursor: pointer;
+  transition: background-color 0.2s ease, transform 0.2s ease;
+}
+
+.details-button-employee:hover {
+  background-color: #138496; /* Màu xanh đậm hơn khi hover */
+  transform: translateY(-2px); /* Tạo hiệu ứng nổi nhẹ */
+}
+
+.details-button-employee:active {
+  background-color: #117a8b; /* Màu xanh đậm nhất khi click */
+  transform: translateY(0); /* Trả lại trạng thái gốc */
+}
+
+.details-button-employee:focus {
+  outline: none;
+  box-shadow: 0 0 5px rgba(23, 162, 184, 0.5); /* Hiệu ứng viền xanh khi focus */
+}
