--- a/frontend/src/pages/Staff/CreateSlip/CreateSlip.css
+++ b/frontend/src/pages/Staff/CreateSlip/CreateSlip.css
@@ -49,6 +49,33 @@
   flex-direction: column;
 }
 
+.form-group-create-slip .input-container {
+  position: relative;
+}
+
+.form-group-create-slip .input-icon {
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  transform: translateY(-50%); /* Centers the icon vertically */
+  color: #ccc;
+}
+
+.form-group-create-slip .form-input {
+  width: 100%;
+  padding: 10px 12px 10px 40px; /* Left padding adjusted for the icon */
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+  box-sizing: border-box; /* Ensures padding doesn't increase field size */
+  margin: 7px 0;
+}
+
+.form-group-create-slip .form-input:focus {
+  border-color: #007bff; /* Highlight on focus */
+  outline: none;
+}
+
 /* Form Label */
 .form-label {
   font-size: 0.875rem; /* text-sm */
@@ -79,25 +106,6 @@
 .disabled-input {
   background-color: #f9fafb; /* bg-gray-50 */
   color: #6b7280; /* text-gray-700 */
-}
-
-/* Form Select */
-.form-select {
-  margin-top: 0.25rem; /* mt-1 */
-  padding: 0.5rem 0.75rem; /* px-3 py-2 */
-  border: 1px solid #d1d5db; /* border-gray-300 */
-  border-radius: 0.375rem; /* rounded-md */
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05); /* shadow-sm */
-  background-color: #ffffff; /* bg-white */
-  color: #374151; /* text-gray-700 */
-  font-size: 0.875rem; /* sm:text-sm */
-  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-}
-
-.form-select:focus {
-  outline: none;
-  border-color: #3b82f6; /* focus:ring-blue-500 */
-  box-shadow: 0 0 0 2px rgba(59, 130, 246, 0.5); /* focus:ring */
 }
 
 /* Submit Button */
