--- a/frontend/src/pages/Staff/ManagementCustomer/ManagementCustomerPage.css
+++ b/frontend/src/pages/Staff/ManagementCustomer/ManagementCustomerPage.css
@@ -378,3 +378,16 @@
   outline: none;
   box-shadow: 0 0 0 3px rgba(72, 173, 93, 0.5); /* Hiệu ứng focus */
 }
+
+.create-member-button {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 5px 10px;
+  cursor: pointer;
+  border-radius: 7px;
+}
+
+.create-member-button:hover {
+  background-color: #0056b3;
+}
