--- a/frontend/src/pages/Customer/LogIn/LogInPage.css
+++ b/frontend/src/pages/Customer/LogIn/LogInPage.css
@@ -8,8 +8,8 @@
   justify-content: center;
   background: linear-gradient(
     to bottom right,
-    #3b82f6,
-    #8b5cf6
+    #edf0f2,
+    #f9f6fe
   ); /* from-blue-500 to-purple-600 */
   padding: 3rem 1rem;
   transition: background 0.5s ease;
